--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ac878f">  <td>22/09/17 11:18:57</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.luma.testcases.HomePageTest@39a8312f]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@67730604</td>   <td></td> </tr>
-<tr bgcolor="ac878f">  <td>22/09/17 11:19:05</td>   <td>7290</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.listPageTest()[pri:0, instance:com.luma.testcases.HomePageTest@39a8312f]">listPageTest</td> 
-  <td>main@67730604</td>   <td></td> </tr>
+<tr bgcolor="ac878f">  <td>23/01/12 21:17:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.listPageTest()[pri:0, instance:com.luma.testcases.HomePageTest@4dc8caa7]">listPageTest</td> 
+  <td>main@628064884</td>   <td></td> </tr>
+<tr bgcolor="ac878f">  <td>23/01/12 21:17:36</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup(java.lang.String)[pri:0, instance:com.luma.testcases.HomePageTest@4dc8caa7]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="ac878f">  <td>23/01/12 21:17:36</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.luma.testcases.HomePageTest@4dc8caa7]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="ac878f">  <td>23/01/12 21:17:36</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.homePageTest()[pri:0, instance:com.luma.testcases.HomePageTest@4dc8caa7]">homePageTest</td> 
+  <td>main@628064884</td>   <td></td> </tr>
+<tr bgcolor="ac878f">  <td>23/01/12 21:17:36</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.luma.testcases.HomePageTest@4dc8caa7]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="ac878f">  <td>23/01/12 21:17:36</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup(java.lang.String)[pri:0, instance:com.luma.testcases.HomePageTest@4dc8caa7]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
