--- a/test-output/old/LumaSuite/methods.html
+++ b/test-output/old/LumaSuite/methods.html
@@ -1,14 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>LumaSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b0bba8">  <td>22/09/24 19:30:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest(java.lang.String,java.lang.String)[pri:0, instance:com.luma.testcases.LoginPageTest@224b4d61]">loginTest</td> 
-  <td>TestNG-tests-1@1565343895</td>   <td></td> </tr>
-<tr bgcolor="b0bba8">  <td>22/09/24 19:30:12</td>   <td>-2692</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.navTest()[pri:0, instance:com.luma.testcases.LoginPageTest@224b4d61]">navTest</td> 
-  <td>TestNG-tests-1@1565343895</td>   <td></td> </tr>
-<tr bgcolor="b0bba8">  <td>22/09/24 19:30:17</td>   <td>2132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginTest()[pri:0, instance:com.luma.testcases.LoginPageTest@224b4d61]">verifyLoginTest</td> 
-  <td>TestNG-tests-1@1565343895</td>   <td></td> </tr>
-<tr bgcolor="b0bba8">  <td>22/09/24 19:30:00</td>   <td>-14028</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp(java.lang.String)[pri:0, instance:com.luma.testcases.LoginPageTest@224b4d61]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1565343895</td>   <td></td> </tr>
-<tr bgcolor="b0bba8">  <td>22/09/24 19:30:17</td>   <td>2268</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.luma.testcases.LoginPageTest@224b4d61]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1565343895</td>   <td></td> </tr>
+<tr bgcolor="fac082">  <td>23/01/18 15:48:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.navTest()[pri:0, instance:com.luma.testcases.LoginPageTest@5d5d9e5]">navTest</td> 
+  <td>TestNG-tests-1@1417782678</td>   <td></td> </tr>
+<tr bgcolor="fac082">  <td>23/01/18 15:48:12</td>   <td>4905</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.luma.testcases.LoginPageTest@5d5d9e5]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1417782678</td>   <td></td> </tr>
+<tr bgcolor="fac082">  <td>23/01/18 15:48:00</td>   <td>-7091</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp(java.lang.String)[pri:0, instance:com.luma.testcases.LoginPageTest@5d5d9e5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1417782678</td>   <td></td> </tr>
+<tr bgcolor="fac082">  <td>23/01/18 15:48:12</td>   <td>4227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginTest()[pri:0, instance:com.luma.testcases.LoginPageTest@5d5d9e5]">verifyLoginTest</td> 
+  <td>TestNG-tests-1@1417782678</td>   <td></td> </tr>
+<tr bgcolor="fac082">  <td>23/01/18 15:48:12</td>   <td>4227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginTest()[pri:0, instance:com.luma.testcases.LoginPageTest@5d5d9e5]">verifyLoginTest</td> 
+  <td>TestNG-tests-1@1417782678</td>   <td></td> </tr>
+<tr bgcolor="fac082">  <td>23/01/18 15:48:10</td>   <td>2036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest(java.lang.String,java.lang.String)[pri:0, instance:com.luma.testcases.LoginPageTest@5d5d9e5]">loginTest</td> 
+  <td>TestNG-tests-1@1417782678</td>   <td></td> </tr>
+<tr bgcolor="fac082">  <td>23/01/18 15:48:12</td>   <td>4227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginTest()[pri:0, instance:com.luma.testcases.LoginPageTest@5d5d9e5]">verifyLoginTest</td> 
+  <td>TestNG-tests-1@1417782678</td>   <td></td> </tr>
+<tr bgcolor="fac082">  <td>23/01/18 15:48:12</td>   <td>4227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginTest()[pri:0, instance:com.luma.testcases.LoginPageTest@5d5d9e5]">verifyLoginTest</td> 
+  <td>TestNG-tests-1@1417782678</td>   <td></td> </tr>
 </table>
