--- a/reports/ExtentReport.html
+++ b/reports/ExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Test Automation Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jan 30, 2023 10:12:22 AM</span></a>
+<a href="#"><span class="badge badge-primary">Jan 30, 2023 01:04:05 PM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">navTest</p>
             <p class="text-sm">
-              <span>10:12:29 AM</span> / <span>00:00:01:375</span>
+              <span>1:04:12 PM</span> / <span>00:00:01:201</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">navTest</h5>
-<span class='badge badge-success'>01.30.2023 10:12:29 AM</span>
-<span class='badge badge-danger'>01.30.2023 10:12:30 AM</span>
-<span class='badge badge-default'>00:00:01:375</span>
+<span class='badge badge-success'>01.30.2023 1:04:12 PM</span>
+<span class='badge badge-danger'>01.30.2023 1:04:13 PM</span>
+<span class='badge badge-default'>00:00:01:201</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,7 +104,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:12:30 AM</td>
+        <td>1:04:13 PM</td>
         <td>
           Passed
         </td>
@@ -121,7 +121,7 @@
           <div class="test-detail">
             <p class="name">loginTest</p>
             <p class="text-sm">
-              <span>10:12:31 AM</span> / <span>00:00:02:155</span>
+              <span>1:04:14 PM</span> / <span>00:00:02:090</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -130,9 +130,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">loginTest</h5>
-<span class='badge badge-success'>01.30.2023 10:12:31 AM</span>
-<span class='badge badge-danger'>01.30.2023 10:12:33 AM</span>
-<span class='badge badge-default'>00:00:02:155</span>
+<span class='badge badge-success'>01.30.2023 1:04:14 PM</span>
+<span class='badge badge-danger'>01.30.2023 1:04:16 PM</span>
+<span class='badge badge-default'>00:00:02:090</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -144,7 +144,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:12:33 AM</td>
+        <td>1:04:16 PM</td>
         <td>
           Passed
         </td>
@@ -161,7 +161,7 @@
           <div class="test-detail">
             <p class="name">verifyLoginTest</p>
             <p class="text-sm">
-              <span>10:12:33 AM</span> / <span>00:00:00:104</span>
+              <span>1:04:16 PM</span> / <span>00:00:00:062</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -170,9 +170,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyLoginTest</h5>
-<span class='badge badge-success'>01.30.2023 10:12:33 AM</span>
-<span class='badge badge-danger'>01.30.2023 10:12:33 AM</span>
-<span class='badge badge-default'>00:00:00:104</span>
+<span class='badge badge-success'>01.30.2023 1:04:16 PM</span>
+<span class='badge badge-danger'>01.30.2023 1:04:16 PM</span>
+<span class='badge badge-default'>00:00:00:062</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -184,7 +184,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:12:33 AM</td>
+        <td>1:04:16 PM</td>
         <td>
           Passed
         </td>
@@ -208,13 +208,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jan 30, 2023 10:12:22 AM</h3>
+<h3>Jan 30, 2023 01:04:05 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jan 30, 2023 10:12:34 AM</h3>
+<h3>Jan 30, 2023 01:04:16 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -284,7 +284,7 @@
 </div></div>
 <script>
 var timeline = {
-"navTest":1.375,"loginTest":2.155,"verifyLoginTest":0.104
+"navTest":1.201,"loginTest":2.09,"verifyLoginTest":0.062
 };
 </script>
 <div class="row">
